// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> can be presented as one of the allowed variants 1`] = `
.c1 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  border-width: 0;
  border-radius: 4px;
  box-shadow: 0 0 16px 0 rgba(0,0,0,0.1);
  background-color: #fff;
}

@media (max-width:767px) {
  .c2 {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

@media (min-width:768px) {
  .c2 {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

@media (max-width:767px) {
  .c2 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

@media (min-width:768px) {
  .c2 {
    padding-top: 3rem;
    padding-bottom: 3rem;
  }
}

<Card
  fullHeight={false}
  spacing="default"
  variant="default"
>
  <Styled(Component)
    fullHeight={false}
    variant="default"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "border-width: 0;",
              "border-radius: 4px;",
              [Function],
              [Function],
            ],
          },
          "displayName": "Styled(Component)",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      fullHeight={false}
      variant="default"
    >
      <Component
        className="c0"
        fullHeight={false}
        variant="default"
      >
        <Box
          className="c0"
          inline={false}
          tag="div"
          variant="default"
        >
          <styled.div
            className="c0"
            inline={false}
            tag="div"
            variant="default"
          >
            <StyledComponent
              className="c0"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    [Function],
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              inline={false}
              tag="div"
              variant="default"
            >
              <div
                className="c0 sc-bxivhb c0 c1"
              >
                <Card__StyledDiv>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "Card__StyledDiv-fwbr1q-0",
                          "isStatic": false,
                          "lastClassName": "sAizx",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "Card__StyledDiv",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "Card__StyledDiv-fwbr1q-0",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className=""
                    >
                      <Box
                        horizontal={4}
                        inline={false}
                        tag="div"
                        vertical={5}
                      >
                        <styled.div
                          horizontal={4}
                          inline={false}
                          tag="div"
                          vertical={5}
                        >
                          <StyledComponent
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [
                                  [Function],
                                ],
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-bdVaJa",
                                  "isStatic": false,
                                  "lastClassName": "c2",
                                  "rules": Array [
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                  ],
                                },
                                "displayName": "styled.div",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "sc-bdVaJa",
                                "target": "div",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            horizontal={4}
                            inline={false}
                            tag="div"
                            vertical={5}
                          >
                            <div
                              className="c2"
                            >
                              Some content
                            </div>
                          </StyledComponent>
                        </styled.div>
                      </Box>
                    </div>
                  </StyledComponent>
                </Card__StyledDiv>
              </div>
            </StyledComponent>
          </styled.div>
        </Box>
      </Component>
    </StyledComponent>
  </Styled(Component)>
</Card>
`;

exports[`<Card /> can be presented as one of the allowed variants 2`] = `
.c1 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  border-width: 0;
  border-radius: 4px;
  box-shadow: 0 0 16px 0 rgba(0,0,0,0.1);
  background-color: #fff;
}

@media (max-width:767px) {
  .c2 {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

@media (min-width:768px) {
  .c2 {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

@media (max-width:767px) {
  .c2 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

@media (min-width:768px) {
  .c2 {
    padding-top: 3rem;
    padding-bottom: 3rem;
  }
}

<Card
  fullHeight={false}
  spacing="default"
  variant="default"
>
  <Styled(Component)
    fullHeight={false}
    variant="default"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "border-width: 0;",
              "border-radius: 4px;",
              [Function],
              [Function],
            ],
          },
          "displayName": "Styled(Component)",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      fullHeight={false}
      variant="default"
    >
      <Component
        className="c0"
        fullHeight={false}
        variant="default"
      >
        <Box
          className="c0"
          inline={false}
          tag="div"
          variant="default"
        >
          <styled.div
            className="c0"
            inline={false}
            tag="div"
            variant="default"
          >
            <StyledComponent
              className="c0"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    [Function],
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              inline={false}
              tag="div"
              variant="default"
            >
              <div
                className="c0 sc-bxivhb c0 c1"
              >
                <Card__StyledDiv>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "Card__StyledDiv-fwbr1q-0",
                          "isStatic": false,
                          "lastClassName": "sAizx",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "Card__StyledDiv",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "Card__StyledDiv-fwbr1q-0",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className=""
                    >
                      <Box
                        horizontal={4}
                        inline={false}
                        tag="div"
                        vertical={5}
                      >
                        <styled.div
                          horizontal={4}
                          inline={false}
                          tag="div"
                          vertical={5}
                        >
                          <StyledComponent
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [
                                  [Function],
                                ],
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-bdVaJa",
                                  "isStatic": false,
                                  "lastClassName": "c2",
                                  "rules": Array [
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                  ],
                                },
                                "displayName": "styled.div",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "sc-bdVaJa",
                                "target": "div",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            horizontal={4}
                            inline={false}
                            tag="div"
                            vertical={5}
                          >
                            <div
                              className="c2"
                            >
                              Some content
                            </div>
                          </StyledComponent>
                        </styled.div>
                      </Box>
                    </div>
                  </StyledComponent>
                </Card__StyledDiv>
              </div>
            </StyledComponent>
          </styled.div>
        </Box>
      </Component>
    </StyledComponent>
  </Styled(Component)>
</Card>
`;

exports[`<Card /> can be presented as one of the allowed variants 3`] = `
.c1 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  border-width: 0;
  border-radius: 4px;
  background-color: #f2eff4;
}

@media (max-width:767px) {
  .c2 {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

@media (min-width:768px) {
  .c2 {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

@media (max-width:767px) {
  .c2 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

@media (min-width:768px) {
  .c2 {
    padding-top: 3rem;
    padding-bottom: 3rem;
  }
}

<Card
  fullHeight={false}
  spacing="default"
  variant="branded"
>
  <Styled(Component)
    fullHeight={false}
    variant="branded"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "border-width: 0;",
              "border-radius: 4px;",
              [Function],
              [Function],
            ],
          },
          "displayName": "Styled(Component)",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      fullHeight={false}
      variant="branded"
    >
      <Component
        className="c0"
        fullHeight={false}
        variant="branded"
      >
        <Box
          className="c0"
          inline={false}
          tag="div"
          variant="branded"
        >
          <styled.div
            className="c0"
            inline={false}
            tag="div"
            variant="branded"
          >
            <StyledComponent
              className="c0"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    [Function],
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              inline={false}
              tag="div"
              variant="branded"
            >
              <div
                className="c0 sc-bxivhb c0 c1"
              >
                <Card__StyledDiv>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "Card__StyledDiv-fwbr1q-0",
                          "isStatic": false,
                          "lastClassName": "sAizx",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "Card__StyledDiv",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "Card__StyledDiv-fwbr1q-0",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className=""
                    >
                      <Box
                        horizontal={4}
                        inline={false}
                        tag="div"
                        vertical={5}
                      >
                        <styled.div
                          horizontal={4}
                          inline={false}
                          tag="div"
                          vertical={5}
                        >
                          <StyledComponent
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [
                                  [Function],
                                ],
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-bdVaJa",
                                  "isStatic": false,
                                  "lastClassName": "c2",
                                  "rules": Array [
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                  ],
                                },
                                "displayName": "styled.div",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "sc-bdVaJa",
                                "target": "div",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            horizontal={4}
                            inline={false}
                            tag="div"
                            vertical={5}
                          >
                            <div
                              className="c2"
                            >
                              Some content
                            </div>
                          </StyledComponent>
                        </styled.div>
                      </Box>
                    </div>
                  </StyledComponent>
                </Card__StyledDiv>
              </div>
            </StyledComponent>
          </styled.div>
        </Box>
      </Component>
    </StyledComponent>
  </Styled(Component)>
</Card>
`;

exports[`<Card /> can be presented as one of the allowed variants 4`] = `
.c1 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  border-width: 0;
  border-radius: 4px;
  background-color: #f7f7f8;
}

@media (max-width:767px) {
  .c2 {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

@media (min-width:768px) {
  .c2 {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

@media (max-width:767px) {
  .c2 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

@media (min-width:768px) {
  .c2 {
    padding-top: 3rem;
    padding-bottom: 3rem;
  }
}

<Card
  fullHeight={false}
  spacing="default"
  variant="alternative"
>
  <Styled(Component)
    fullHeight={false}
    variant="alternative"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "border-width: 0;",
              "border-radius: 4px;",
              [Function],
              [Function],
            ],
          },
          "displayName": "Styled(Component)",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      fullHeight={false}
      variant="alternative"
    >
      <Component
        className="c0"
        fullHeight={false}
        variant="alternative"
      >
        <Box
          className="c0"
          inline={false}
          tag="div"
          variant="alternative"
        >
          <styled.div
            className="c0"
            inline={false}
            tag="div"
            variant="alternative"
          >
            <StyledComponent
              className="c0"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    [Function],
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              inline={false}
              tag="div"
              variant="alternative"
            >
              <div
                className="c0 sc-bxivhb c0 c1"
              >
                <Card__StyledDiv>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "Card__StyledDiv-fwbr1q-0",
                          "isStatic": false,
                          "lastClassName": "sAizx",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "Card__StyledDiv",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "Card__StyledDiv-fwbr1q-0",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className=""
                    >
                      <Box
                        horizontal={4}
                        inline={false}
                        tag="div"
                        vertical={5}
                      >
                        <styled.div
                          horizontal={4}
                          inline={false}
                          tag="div"
                          vertical={5}
                        >
                          <StyledComponent
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [
                                  [Function],
                                ],
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-bdVaJa",
                                  "isStatic": false,
                                  "lastClassName": "c2",
                                  "rules": Array [
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                  ],
                                },
                                "displayName": "styled.div",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "sc-bdVaJa",
                                "target": "div",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            horizontal={4}
                            inline={false}
                            tag="div"
                            vertical={5}
                          >
                            <div
                              className="c2"
                            >
                              Some content
                            </div>
                          </StyledComponent>
                        </styled.div>
                      </Box>
                    </div>
                  </StyledComponent>
                </Card__StyledDiv>
              </div>
            </StyledComponent>
          </styled.div>
        </Box>
      </Component>
    </StyledComponent>
  </Styled(Component)>
</Card>
`;

exports[`<Card /> can be presented as one of the allowed variants 5`] = `
.c1 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  border-width: 0;
  border-radius: 4px;
  box-shadow: 0 0 16px 0 rgba(0,0,0,0.1);
  background-color: #fff;
  border: 1px solid #d8d8d8;
}

@media (max-width:767px) {
  .c2 {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

@media (min-width:768px) {
  .c2 {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

@media (max-width:767px) {
  .c2 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

@media (min-width:768px) {
  .c2 {
    padding-top: 3rem;
    padding-bottom: 3rem;
  }
}

<Card
  fullHeight={false}
  spacing="default"
  variant="defaultWithBorder"
>
  <Styled(Component)
    fullHeight={false}
    variant="defaultWithBorder"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "border-width: 0;",
              "border-radius: 4px;",
              [Function],
              [Function],
            ],
          },
          "displayName": "Styled(Component)",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      fullHeight={false}
      variant="defaultWithBorder"
    >
      <Component
        className="c0"
        fullHeight={false}
        variant="defaultWithBorder"
      >
        <Box
          className="c0"
          inline={false}
          tag="div"
          variant="defaultWithBorder"
        >
          <styled.div
            className="c0"
            inline={false}
            tag="div"
            variant="defaultWithBorder"
          >
            <StyledComponent
              className="c0"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    [Function],
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              inline={false}
              tag="div"
              variant="defaultWithBorder"
            >
              <div
                className="c0 sc-bxivhb c0 c1"
              >
                <Card__StyledDiv>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "Card__StyledDiv-fwbr1q-0",
                          "isStatic": false,
                          "lastClassName": "sAizx",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "Card__StyledDiv",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "Card__StyledDiv-fwbr1q-0",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className=""
                    >
                      <Box
                        horizontal={4}
                        inline={false}
                        tag="div"
                        vertical={5}
                      >
                        <styled.div
                          horizontal={4}
                          inline={false}
                          tag="div"
                          vertical={5}
                        >
                          <StyledComponent
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [
                                  [Function],
                                ],
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-bdVaJa",
                                  "isStatic": false,
                                  "lastClassName": "c2",
                                  "rules": Array [
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                  ],
                                },
                                "displayName": "styled.div",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "sc-bdVaJa",
                                "target": "div",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            horizontal={4}
                            inline={false}
                            tag="div"
                            vertical={5}
                          >
                            <div
                              className="c2"
                            >
                              Some content
                            </div>
                          </StyledComponent>
                        </styled.div>
                      </Box>
                    </div>
                  </StyledComponent>
                </Card__StyledDiv>
              </div>
            </StyledComponent>
          </styled.div>
        </Box>
      </Component>
    </StyledComponent>
  </Styled(Component)>
</Card>
`;

exports[`<Card /> full bleed image renders with an image 1`] = `
.c1 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  height: auto;
  max-width: 100%;
}

.c0 {
  border-width: 0;
  border-radius: 4px;
  box-shadow: 0 0 16px 0 rgba(0,0,0,0.1);
  background-color: #fff;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 > img {
  display: block;
  margin: 0 auto;
}

@media (max-width:767px) {
  .c4 {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

@media (min-width:768px) {
  .c4 {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

@media (max-width:767px) {
  .c4 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

@media (min-width:768px) {
  .c4 {
    padding-top: 3rem;
    padding-bottom: 3rem;
  }
}

<Card
  fullBleedImage={
    Object {
      "alt": "image",
      "height": 200,
      "position": "top",
      "src": "image-example.jpg",
      "width": 200,
    }
  }
  fullHeight={false}
  spacing="default"
  variant="default"
>
  <Styled(Component)
    fullHeight={false}
    variant="default"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "border-width: 0;",
              "border-radius: 4px;",
              [Function],
              [Function],
            ],
          },
          "displayName": "Styled(Component)",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      fullHeight={false}
      variant="default"
    >
      <Component
        className="c0"
        fullHeight={false}
        variant="default"
      >
        <Box
          className="c0"
          inline={false}
          tag="div"
          variant="default"
        >
          <styled.div
            className="c0"
            inline={false}
            tag="div"
            variant="default"
          >
            <StyledComponent
              className="c0"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    [Function],
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "c4",
                    "rules": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              inline={false}
              tag="div"
              variant="default"
            >
              <div
                className="c0 sc-bxivhb c0 c1"
              >
                <Card__StyledDiv
                  alt="image"
                  height={200}
                  position="top"
                  src="image-example.jpg"
                  width={200}
                >
                  <StyledComponent
                    alt="image"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "Card__StyledDiv-fwbr1q-0",
                          "isStatic": false,
                          "lastClassName": "c2",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "Card__StyledDiv",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "Card__StyledDiv-fwbr1q-0",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    height={200}
                    position="top"
                    src="image-example.jpg"
                    width={200}
                  >
                    <div
                      alt="image"
                      className="c2"
                      height={200}
                      src="image-example.jpg"
                      width={200}
                    >
                      <Image
                        alt="image"
                        height={200}
                        position="top"
                        src="image-example.jpg"
                        width={200}
                      >
                        <Image__StyledImage
                          alt="image"
                          height={200}
                          position="top"
                          src="image-example.jpg"
                          width={200}
                        >
                          <StyledComponent
                            alt="image"
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "Image__StyledImage-b16p20-0",
                                  "isStatic": true,
                                  "lastClassName": "c3",
                                  "rules": Array [
                                    "height: auto;",
                                    "max-width: 100%;",
                                  ],
                                },
                                "displayName": "Image__StyledImage",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "Image__StyledImage-b16p20-0",
                                "target": "img",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            height={200}
                            position="top"
                            src="image-example.jpg"
                            width={200}
                          >
                            <img
                              alt="image"
                              className="c3"
                              height={200}
                              src="image-example.jpg"
                              width={200}
                            />
                          </StyledComponent>
                        </Image__StyledImage>
                      </Image>
                      <Box
                        horizontal={4}
                        inline={false}
                        tag="div"
                        vertical={5}
                      >
                        <styled.div
                          horizontal={4}
                          inline={false}
                          tag="div"
                          vertical={5}
                        >
                          <StyledComponent
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [
                                  [Function],
                                ],
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-bdVaJa",
                                  "isStatic": false,
                                  "lastClassName": "c4",
                                  "rules": Array [
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                  ],
                                },
                                "displayName": "styled.div",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "sc-bdVaJa",
                                "target": "div",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            horizontal={4}
                            inline={false}
                            tag="div"
                            vertical={5}
                          >
                            <div
                              className="c4"
                            >
                              Some content
                            </div>
                          </StyledComponent>
                        </styled.div>
                      </Box>
                    </div>
                  </StyledComponent>
                </Card__StyledDiv>
              </div>
            </StyledComponent>
          </styled.div>
        </Box>
      </Component>
    </StyledComponent>
  </Styled(Component)>
</Card>
`;

exports[`<Card /> full bleed image renders with responsive image props 1`] = `
.c1 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  height: auto;
  max-width: 100%;
}

.c0 {
  border-width: 0;
  border-radius: 4px;
  box-shadow: 0 0 16px 0 rgba(0,0,0,0.1);
  background-color: #fff;
}

@media (max-width:767px) {
  .c4 {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

@media (min-width:768px) {
  .c4 {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

@media (max-width:767px) {
  .c4 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

@media (min-width:768px) {
  .c4 {
    padding-top: 3rem;
    padding-bottom: 3rem;
  }
}

@media (max-width:767px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }

  .c2 > img {
    display: block;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }

  .c2 > img {
    display: block;
    margin: 0 auto;
  }
}

<Card
  fullBleedImage={
    Object {
      "alt": "image",
      "height": 200,
      "position": Object {
        "md": "bottom",
        "xs": "top",
      },
      "src": "image-example.jpg",
      "width": 200,
    }
  }
  fullHeight={false}
  spacing="default"
  variant="default"
>
  <Styled(Component)
    fullHeight={false}
    variant="default"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "border-width: 0;",
              "border-radius: 4px;",
              [Function],
              [Function],
            ],
          },
          "displayName": "Styled(Component)",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      fullHeight={false}
      variant="default"
    >
      <Component
        className="c0"
        fullHeight={false}
        variant="default"
      >
        <Box
          className="c0"
          inline={false}
          tag="div"
          variant="default"
        >
          <styled.div
            className="c0"
            inline={false}
            tag="div"
            variant="default"
          >
            <StyledComponent
              className="c0"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    [Function],
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "c4",
                    "rules": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              inline={false}
              tag="div"
              variant="default"
            >
              <div
                className="c0 sc-bxivhb c0 c1"
              >
                <Card__StyledDiv
                  alt="image"
                  height={200}
                  position={
                    Object {
                      "md": "bottom",
                      "xs": "top",
                    }
                  }
                  src="image-example.jpg"
                  width={200}
                >
                  <StyledComponent
                    alt="image"
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "Card__StyledDiv-fwbr1q-0",
                          "isStatic": false,
                          "lastClassName": "c2",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "Card__StyledDiv",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "Card__StyledDiv-fwbr1q-0",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                    height={200}
                    position={
                      Object {
                        "md": "bottom",
                        "xs": "top",
                      }
                    }
                    src="image-example.jpg"
                    width={200}
                  >
                    <div
                      alt="image"
                      className="c2"
                      height={200}
                      src="image-example.jpg"
                      width={200}
                    >
                      <Image
                        alt="image"
                        height={200}
                        position={
                          Object {
                            "md": "bottom",
                            "xs": "top",
                          }
                        }
                        src="image-example.jpg"
                        width={200}
                      >
                        <Image__StyledImage
                          alt="image"
                          height={200}
                          position={
                            Object {
                              "md": "bottom",
                              "xs": "top",
                            }
                          }
                          src="image-example.jpg"
                          width={200}
                        >
                          <StyledComponent
                            alt="image"
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "Image__StyledImage-b16p20-0",
                                  "isStatic": true,
                                  "lastClassName": "c3",
                                  "rules": Array [
                                    "height: auto;",
                                    "max-width: 100%;",
                                  ],
                                },
                                "displayName": "Image__StyledImage",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "Image__StyledImage-b16p20-0",
                                "target": "img",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            height={200}
                            position={
                              Object {
                                "md": "bottom",
                                "xs": "top",
                              }
                            }
                            src="image-example.jpg"
                            width={200}
                          >
                            <img
                              alt="image"
                              className="c3"
                              height={200}
                              src="image-example.jpg"
                              width={200}
                            />
                          </StyledComponent>
                        </Image__StyledImage>
                      </Image>
                      <Box
                        horizontal={4}
                        inline={false}
                        tag="div"
                        vertical={5}
                      >
                        <styled.div
                          horizontal={4}
                          inline={false}
                          tag="div"
                          vertical={5}
                        >
                          <StyledComponent
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [
                                  [Function],
                                ],
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-bdVaJa",
                                  "isStatic": false,
                                  "lastClassName": "c4",
                                  "rules": Array [
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                  ],
                                },
                                "displayName": "styled.div",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "sc-bdVaJa",
                                "target": "div",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            horizontal={4}
                            inline={false}
                            tag="div"
                            vertical={5}
                          >
                            <div
                              className="c4"
                            >
                              Some content
                            </div>
                          </StyledComponent>
                        </styled.div>
                      </Box>
                    </div>
                  </StyledComponent>
                </Card__StyledDiv>
              </div>
            </StyledComponent>
          </styled.div>
        </Box>
      </Component>
    </StyledComponent>
  </Styled(Component)>
</Card>
`;

exports[`<Card /> full bleed image renders without an image 1`] = `
.c1 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  border-width: 0;
  border-radius: 4px;
  box-shadow: 0 0 16px 0 rgba(0,0,0,0.1);
  background-color: #fff;
}

@media (max-width:767px) {
  .c2 {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

@media (min-width:768px) {
  .c2 {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

@media (max-width:767px) {
  .c2 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

@media (min-width:768px) {
  .c2 {
    padding-top: 3rem;
    padding-bottom: 3rem;
  }
}

<Card
  fullHeight={false}
  spacing="default"
  variant="default"
>
  <Styled(Component)
    fullHeight={false}
    variant="default"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "border-width: 0;",
              "border-radius: 4px;",
              [Function],
              [Function],
            ],
          },
          "displayName": "Styled(Component)",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      fullHeight={false}
      variant="default"
    >
      <Component
        className="c0"
        fullHeight={false}
        variant="default"
      >
        <Box
          className="c0"
          inline={false}
          tag="div"
          variant="default"
        >
          <styled.div
            className="c0"
            inline={false}
            tag="div"
            variant="default"
          >
            <StyledComponent
              className="c0"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    [Function],
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              inline={false}
              tag="div"
              variant="default"
            >
              <div
                className="c0 sc-bxivhb c0 c1"
              >
                <Card__StyledDiv>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "Card__StyledDiv-fwbr1q-0",
                          "isStatic": false,
                          "lastClassName": "sAizx",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "Card__StyledDiv",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "Card__StyledDiv-fwbr1q-0",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className=""
                    >
                      <Box
                        horizontal={4}
                        inline={false}
                        tag="div"
                        vertical={5}
                      >
                        <styled.div
                          horizontal={4}
                          inline={false}
                          tag="div"
                          vertical={5}
                        >
                          <StyledComponent
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [
                                  [Function],
                                ],
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-bdVaJa",
                                  "isStatic": false,
                                  "lastClassName": "c2",
                                  "rules": Array [
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                  ],
                                },
                                "displayName": "styled.div",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "sc-bdVaJa",
                                "target": "div",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            horizontal={4}
                            inline={false}
                            tag="div"
                            vertical={5}
                          >
                            <div
                              className="c2"
                            >
                              Some content
                            </div>
                          </StyledComponent>
                        </styled.div>
                      </Box>
                    </div>
                  </StyledComponent>
                </Card__StyledDiv>
              </div>
            </StyledComponent>
          </styled.div>
        </Box>
      </Component>
    </StyledComponent>
  </Styled(Component)>
</Card>
`;

exports[`<Card /> renders 1`] = `
.c1 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  border-width: 0;
  border-radius: 4px;
  box-shadow: 0 0 16px 0 rgba(0,0,0,0.1);
  background-color: #fff;
}

@media (max-width:767px) {
  .c2 {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

@media (min-width:768px) {
  .c2 {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

@media (max-width:767px) {
  .c2 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

@media (min-width:768px) {
  .c2 {
    padding-top: 3rem;
    padding-bottom: 3rem;
  }
}

<div
  class="c0 sc-bxivhb c0 c1"
>
  <div
    class=""
  >
    <div
      class="c2"
    >
      Children
    </div>
  </div>
</div>
`;

exports[`<Card /> spacing renders compact spacing 1`] = `
.c1 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 1rem;
  padding-bottom: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c0 {
  border-width: 0;
  border-radius: 4px;
  box-shadow: 0 0 16px 0 rgba(0,0,0,0.1);
  background-color: #fff;
}

<Card
  fullHeight={false}
  spacing="compact"
  variant="default"
>
  <Styled(Component)
    fullHeight={false}
    variant="default"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "border-width: 0;",
              "border-radius: 4px;",
              [Function],
              [Function],
            ],
          },
          "displayName": "Styled(Component)",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      fullHeight={false}
      variant="default"
    >
      <Component
        className="c0"
        fullHeight={false}
        variant="default"
      >
        <Box
          className="c0"
          inline={false}
          tag="div"
          variant="default"
        >
          <styled.div
            className="c0"
            inline={false}
            tag="div"
            variant="default"
          >
            <StyledComponent
              className="c0"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    [Function],
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              inline={false}
              tag="div"
              variant="default"
            >
              <div
                className="c0 sc-bxivhb c0 c1"
              >
                <Card__StyledDiv>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "Card__StyledDiv-fwbr1q-0",
                          "isStatic": false,
                          "lastClassName": "sAizx",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "Card__StyledDiv",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "Card__StyledDiv-fwbr1q-0",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className=""
                    >
                      <Box
                        inline={false}
                        inset={3}
                        tag="div"
                      >
                        <styled.div
                          inline={false}
                          inset={3}
                          tag="div"
                        >
                          <StyledComponent
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [
                                  [Function],
                                ],
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-bdVaJa",
                                  "isStatic": false,
                                  "lastClassName": "c2",
                                  "rules": Array [
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                  ],
                                },
                                "displayName": "styled.div",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "sc-bdVaJa",
                                "target": "div",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            inline={false}
                            inset={3}
                            tag="div"
                          >
                            <div
                              className="c2"
                            >
                              Some content
                            </div>
                          </StyledComponent>
                        </styled.div>
                      </Box>
                    </div>
                  </StyledComponent>
                </Card__StyledDiv>
              </div>
            </StyledComponent>
          </styled.div>
        </Box>
      </Component>
    </StyledComponent>
  </Styled(Component)>
</Card>
`;

exports[`<Card /> spacing renders default spacing 1`] = `
.c1 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  border-width: 0;
  border-radius: 4px;
  box-shadow: 0 0 16px 0 rgba(0,0,0,0.1);
  background-color: #fff;
}

@media (max-width:767px) {
  .c2 {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

@media (min-width:768px) {
  .c2 {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

@media (max-width:767px) {
  .c2 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

@media (min-width:768px) {
  .c2 {
    padding-top: 3rem;
    padding-bottom: 3rem;
  }
}

<Card
  fullHeight={false}
  spacing="default"
  variant="default"
>
  <Styled(Component)
    fullHeight={false}
    variant="default"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "border-width: 0;",
              "border-radius: 4px;",
              [Function],
              [Function],
            ],
          },
          "displayName": "Styled(Component)",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      fullHeight={false}
      variant="default"
    >
      <Component
        className="c0"
        fullHeight={false}
        variant="default"
      >
        <Box
          className="c0"
          inline={false}
          tag="div"
          variant="default"
        >
          <styled.div
            className="c0"
            inline={false}
            tag="div"
            variant="default"
          >
            <StyledComponent
              className="c0"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    [Function],
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              inline={false}
              tag="div"
              variant="default"
            >
              <div
                className="c0 sc-bxivhb c0 c1"
              >
                <Card__StyledDiv>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "Card__StyledDiv-fwbr1q-0",
                          "isStatic": false,
                          "lastClassName": "sAizx",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "Card__StyledDiv",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "Card__StyledDiv-fwbr1q-0",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className=""
                    >
                      <Box
                        horizontal={4}
                        inline={false}
                        tag="div"
                        vertical={5}
                      >
                        <styled.div
                          horizontal={4}
                          inline={false}
                          tag="div"
                          vertical={5}
                        >
                          <StyledComponent
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [
                                  [Function],
                                ],
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-bdVaJa",
                                  "isStatic": false,
                                  "lastClassName": "c2",
                                  "rules": Array [
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                  ],
                                },
                                "displayName": "styled.div",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "sc-bdVaJa",
                                "target": "div",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            horizontal={4}
                            inline={false}
                            tag="div"
                            vertical={5}
                          >
                            <div
                              className="c2"
                            >
                              Some content
                            </div>
                          </StyledComponent>
                        </styled.div>
                      </Box>
                    </div>
                  </StyledComponent>
                </Card__StyledDiv>
              </div>
            </StyledComponent>
          </styled.div>
        </Box>
      </Component>
    </StyledComponent>
  </Styled(Component)>
</Card>
`;

exports[`<Card /> spacing renders intermediate spacing 1`] = `
.c1 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  border-width: 0;
  border-radius: 4px;
  box-shadow: 0 0 16px 0 rgba(0,0,0,0.1);
  background-color: #fff;
}

@media (max-width:767px) {
  .c2 {
    padding-top: 1.5rem;
    padding-bottom: 1.5rem;
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

@media (min-width:768px) {
  .c2 {
    padding-top: 2rem;
    padding-bottom: 2rem;
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

<Card
  fullHeight={false}
  spacing="intermediate"
  variant="default"
>
  <Styled(Component)
    fullHeight={false}
    variant="default"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "border-width: 0;",
              "border-radius: 4px;",
              [Function],
              [Function],
            ],
          },
          "displayName": "Styled(Component)",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      fullHeight={false}
      variant="default"
    >
      <Component
        className="c0"
        fullHeight={false}
        variant="default"
      >
        <Box
          className="c0"
          inline={false}
          tag="div"
          variant="default"
        >
          <styled.div
            className="c0"
            inline={false}
            tag="div"
            variant="default"
          >
            <StyledComponent
              className="c0"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    [Function],
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              inline={false}
              tag="div"
              variant="default"
            >
              <div
                className="c0 sc-bxivhb c0 c1"
              >
                <Card__StyledDiv>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "Card__StyledDiv-fwbr1q-0",
                          "isStatic": false,
                          "lastClassName": "sAizx",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "Card__StyledDiv",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "Card__StyledDiv-fwbr1q-0",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className=""
                    >
                      <Box
                        inline={false}
                        inset={4}
                        tag="div"
                      >
                        <styled.div
                          inline={false}
                          inset={4}
                          tag="div"
                        >
                          <StyledComponent
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [
                                  [Function],
                                ],
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-bdVaJa",
                                  "isStatic": false,
                                  "lastClassName": "c2",
                                  "rules": Array [
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                  ],
                                },
                                "displayName": "styled.div",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "sc-bdVaJa",
                                "target": "div",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            inline={false}
                            inset={4}
                            tag="div"
                          >
                            <div
                              className="c2"
                            >
                              Some content
                            </div>
                          </StyledComponent>
                        </styled.div>
                      </Box>
                    </div>
                  </StyledComponent>
                </Card__StyledDiv>
              </div>
            </StyledComponent>
          </styled.div>
        </Box>
      </Component>
    </StyledComponent>
  </Styled(Component)>
</Card>
`;

exports[`<Card /> spacing renders narrow spacing 1`] = `
.c1 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c0 {
  border-width: 0;
  border-radius: 4px;
  box-shadow: 0 0 16px 0 rgba(0,0,0,0.1);
  background-color: #fff;
}

@media (max-width:767px) {
  .c2 {
    padding-top: 1.5rem;
    padding-bottom: 1.5rem;
  }
}

@media (min-width:768px) {
  .c2 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

<Card
  fullHeight={false}
  spacing="narrow"
  variant="default"
>
  <Styled(Component)
    fullHeight={false}
    variant="default"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "border-width: 0;",
              "border-radius: 4px;",
              [Function],
              [Function],
            ],
          },
          "displayName": "Styled(Component)",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      fullHeight={false}
      variant="default"
    >
      <Component
        className="c0"
        fullHeight={false}
        variant="default"
      >
        <Box
          className="c0"
          inline={false}
          tag="div"
          variant="default"
        >
          <styled.div
            className="c0"
            inline={false}
            tag="div"
            variant="default"
          >
            <StyledComponent
              className="c0"
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [
                    [Function],
                  ],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-bdVaJa",
                    "isStatic": false,
                    "lastClassName": "c2",
                    "rules": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-bdVaJa",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
              inline={false}
              tag="div"
              variant="default"
            >
              <div
                className="c0 sc-bxivhb c0 c1"
              >
                <Card__StyledDiv>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "Card__StyledDiv-fwbr1q-0",
                          "isStatic": false,
                          "lastClassName": "sAizx",
                          "rules": Array [
                            [Function],
                          ],
                        },
                        "displayName": "Card__StyledDiv",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "Card__StyledDiv-fwbr1q-0",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className=""
                    >
                      <Box
                        horizontal={3}
                        inline={false}
                        tag="div"
                        vertical={4}
                      >
                        <styled.div
                          horizontal={3}
                          inline={false}
                          tag="div"
                          vertical={4}
                        >
                          <StyledComponent
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [
                                  [Function],
                                ],
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-bdVaJa",
                                  "isStatic": false,
                                  "lastClassName": "c2",
                                  "rules": Array [
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                    [Function],
                                  ],
                                },
                                "displayName": "styled.div",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "sc-bdVaJa",
                                "target": "div",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            horizontal={3}
                            inline={false}
                            tag="div"
                            vertical={4}
                          >
                            <div
                              className="c2"
                            >
                              Some content
                            </div>
                          </StyledComponent>
                        </styled.div>
                      </Box>
                    </div>
                  </StyledComponent>
                </Card__StyledDiv>
              </div>
            </StyledComponent>
          </styled.div>
        </Box>
      </Component>
    </StyledComponent>
  </Styled(Component)>
</Card>
`;
